# pawa1

./: .env.example  .gitignore  CLAUDE.md  SKILL.md  accounting.html  admin.html  agent-houses.html  agent-register.html  agent-services.html  agent-trucks.html  agent.html  agents.html  area.html  book-fast.html  book.html  buses.html  capacitor.config.json  chat.html  dashboard.html  favorites.html  frame.MD  frame.html  house.html  houses-compact.html  houses.html  index.html  jobs.html  login.html  manifest.json  meet.html  near-me.html  package-lock.json  package.json  render.yaml  ride.html  saas.html  send.html  serve.js  server.js  service-worker.js  (+8 more)
.claude/: settings.json
android/: gradle.properties
css/: accounting.css  auth.css  claude-design.css  design-system.css  houses-mobile-pro.css  houses-pro.css  mobile.css  neon-pro.css  premium.css  styles.css  theme-light.css
data/: agents.json  buses.json  houses-compact.html  houses.json  regions.json  services.json  shipments.json  trucks.json
docs/: AGENT_SUBSCRIPTIONS.md  AI-SEARCH.md  APP_BUILD.md  BUS_TZ_PAWA_AGENT_PROMPT.md  CLERK_SETUP.md  ENVIRONMENT.md  LANGUAGE-ROUTING.md  OUTBOUND_CALLER_WIRE_UP.md  README.md  SELCOM_SETUP.md  SETUP_GUIDE.md  SLICE_2_RUNBOOK.md  SLICE_3_RUNBOOK.md  SLICE_4_RUNBOOK.md  VOICE_AGENT_DEPLOY.md  bus-agent-prompt.md
js/: accounting.js  admin.js  agent-dashboard.js  agent-demand-board.js  agent-houses.js  agent-profile.js  agent-register.js  agent-services.js  agent-trucks.js  agents.js  ai-search.js  ai-tools.js  ai.js  analytics.js  app-shell.js  (+58 more)
services/python/: Dockerfile  main.py  pyproject.toml
services/rust/: Cargo.toml
services/rust/src/: lib.rs  main.rs
(+216 files in other folders)
